--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/francescocarraro77/ProgettoIng2#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "cross-fetch": "^3.1.4",
     "express": "^4.17.2",
