--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "jest"
   },
   "repository": {
@@ -30,6 +31,5 @@
   "jest": {
     "verbose": true,
     "collectCoverage": true
-  }  
-
+  }
 }
