--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.1",
     "cross-fetch": "^3.1.4",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "node-fetch": "^3.1.0"
   },
@@ -30,6 +31,5 @@
   "jest": {
     "verbose": true,
     "collectCoverage": true
-  }  
-
+  }
 }
